// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid disables fluid styling if provided 1`] = `
<div
  className="container "
  data-garden-id="grid.grid"
  data-garden-version="version"
/>
`;

exports[`Grid renders RTL styling if provided 1`] = `
<div
  className="container-fluid is-rtl "
  data-garden-id="grid.grid"
  data-garden-version="version"
/>
`;

exports[`Grid renders debug styling if provided 1`] = `
<div
  className="container-fluid is-debug "
  data-garden-id="grid.grid"
  data-garden-version="version"
/>
`;

exports[`Grid renders default styling 1`] = `
<div
  className="container-fluid "
  data-garden-id="grid.grid"
  data-garden-version="version"
/>
`;
